View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026892 | Open CASCADE | OCCT:Visualization | public | 2015-11-18 10:21 | 2016-04-20 15:50 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | feature | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026892: Visualization, TKOpenGl - support 3D textures within OpenGl_Texture | ||||
Description | Current implementation of OpenGl_Texture doesn't support 3-dimensional textures. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR26892 has been created by isk. SHA-1: 2765eac9ef1d1b89cb7f3ee6eeeb94acc7f5160f Detailed log of new commits: Author: isk Date: Fri Nov 20 13:56:11 2015 +0300 0026892: Visualization, TKOpenGl - support 3D textures within OpenGl_Texture |
|
Dear Kirill, please review the branch CR26892. |
|
+ bool HasFloatingPointTexture() + { + return (IsGlGreaterEqual (3, 0) || CheckExtension ("GL_ARB_texture_float")); + } this check is expected to be done once in ::init(), e.g. cached in class field as other similar checks. +#if defined(GL_ES_3_0) + inline void glTexImage3D (GLenum target, GLint level, GLint internalFormat, GLsizei width, GLsizei height, GLsizei depth, GLint border, GLenum format, GLenum type, const GLvoid* data) + { + ::glTexImage3D (target, level, internalFormat, width, height, depth, border, format, type, data); + } +#endif this is wrong way for extending functionality - please define a prototype, function pointer and retrieve it dynamically within ::init(). +#if !defined(GL_ES_VERSION_2_0) || defined(GL_ES_VERSION_3_0) these checks should be removed. + theCtx->core15fwd->glTexImage3D (GL_PROXY_TEXTURE_3D, ... + glGetTexLevelParameteriv (GL_PROXY_TEXTURE_3D, 0, GL_TEXTURE_WIDTH, &aTestSizeX); it doesn't look like this code has been checked for compilation within OpenGL ES - there no proxy textures available even within OpenGL ES 3.2. And glTexImage3D() will not be within core15fwd as well. + GLsizei mySizeZ; //!< texture depth new field is not initialized within constructor. |
|
Branch CR26892 has been updated by isk. SHA-1: 4846a1076d0232fbb273f76995ccb79aff1ec549 Detailed log of new commits: Author: isk Date: Tue Nov 24 11:13:28 2015 +0300 Fix remarks by kgv. |
|
Branch CR26892 has been updated forcibly by isk. SHA-1: 8b87aec771548d81fc92ed5028b2d948e7b7b54f |
|
Branch CR26892_1 has been created by isk. SHA-1: 455b6fb9da683c8aeac326ab890c16e012ebf711 Detailed log of new commits: Author: isk Date: Tue Nov 24 13:13:29 2015 +0300 0026892: Visualization, TKOpenGl - support 3D textures within OpenGl_Texture Add a new arbTexFloat extension in OpenGl_Context. Add a new prototype glTexImage in OpenGl_GlFunctions. |
|
Branch CR26892 has been updated by isk. SHA-1: 657279dc2543d7ab3feec8135d8745d7f0108d3d Detailed log of new commits: Author: isk Date: Tue Nov 24 15:47:08 2015 +0300 Cosmetics. |
|
Branch CR26892_1 has been updated forcibly by isk. SHA-1: da0a0a3169a30a9a83e9fdb19c7112621de931b3 |
|
Branch CR26892_1 has been updated forcibly by isk. SHA-1: 90160585efbaa86e985b8dbd9c208d346f1c1d69 |
|
Dear Kirill, please review the branch CR26892_1. |
|
Branch CR26892 has been updated by isk. SHA-1: 93cf4e0c25f3436fa34df73b9d71ad0410fef6d4 Detailed log of new commits: Author: isk Date: Wed Nov 25 11:32:33 2015 +0300 Add missing initialization arbTexFloat for OpenGL ES 3.0+. Push error message if glTexImage3D is unavailable. |
|
Branch CR26892_1 has been updated forcibly by isk. SHA-1: 599c131d48570cefba2997a12f385fecd2fc9f57 |
|
Dear Kirill, please review the branch CR26892_1. |
|
Branch CR26892_1 has been updated forcibly by isk. SHA-1: 46e66cc61a5f7107a4d50e02c8c2b7a9d67fe96e |
|
Rebase branch CR26892_1 on the current master. |
|
Please check compilation, testing is not needed. |
|
Branch CR26892_1 has been updated forcibly by mkv. SHA-1: 71a1451fa821cb664d0bf1f6423734c5677ca211 |
|
Dear BugMaster, Branch CR26892_1 was rebased on current master of occt git-repository. SHA-1: 71a1451fa821cb664d0bf1f6423734c5677ca211 |
|
Dear BugMaster, Branch CR26892_1 from occt git-repository (and master from products git-repository) was compiled on Linux and Windows platforms on Release mode. SHA-1: 71a1451fa821cb664d0bf1f6423734c5677ca211 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) products component : Linux: 37 (37 on master) Windows: 0 (0 on master) |
|
Dear BugMaster, Branch CR26892_1 is TESTED. |
|
Branch CR26892 has been deleted by kgv. SHA-1: 93cf4e0c25f3436fa34df73b9d71ad0410fef6d4 |
|
Branch CR26892_1 has been deleted by kgv. SHA-1: 71a1451fa821cb664d0bf1f6423734c5677ca211 |
occt: master 74fb257d 2015-11-25 08:35:38
Committer: bugmaster Details Diff |
0026892: Visualization, TKOpenGl - support 3D textures within OpenGl_Texture Add a new arbTexFloat extension in OpenGl_Context. Add a new prototype glTexImage in OpenGl_GlFunctions. Push error message if glTexImage3D is unavailable. |
Affected Issues 0026892 |
|
mod - src/OpenGl/OpenGl_Context.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_Context.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_GlFunctions.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_Texture.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_Texture.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-11-18 10:21 |
|
New Issue | |
2015-11-18 10:21 |
|
Assigned To | => kgv |
2015-11-18 11:32 | kgv | Assigned To | kgv => isk |
2015-11-18 11:32 | kgv | Severity | minor => feature |
2015-11-18 11:32 | kgv | Status | new => assigned |
2015-11-18 11:32 | kgv | Summary | Visualization, TKOpenGl - OpenGl_Texture doesn't support 3-dimensional textures => Visualization, TKOpenGl - support 3D textures within OpenGl_Texture |
2015-11-20 14:00 | git | Note Added: 0048413 | |
2015-11-20 14:01 |
|
Note Added: 0048414 | |
2015-11-20 14:01 |
|
Assigned To | isk => kgv |
2015-11-20 14:01 |
|
Status | assigned => resolved |
2015-11-20 14:01 |
|
Steps to Reproduce Updated | |
2015-11-20 14:39 | kgv | Note Added: 0048422 | |
2015-11-20 14:39 | kgv | Assigned To | kgv => isk |
2015-11-20 14:39 | kgv | Status | resolved => assigned |
2015-11-24 13:09 | git | Note Added: 0048510 | |
2015-11-24 13:11 | git | Note Added: 0048511 | |
2015-11-24 13:13 | git | Note Added: 0048512 | |
2015-11-25 08:47 | git | Note Added: 0048543 | |
2015-11-25 08:47 | git | Note Added: 0048544 | |
2015-11-25 09:01 | git | Note Added: 0048545 | |
2015-11-25 09:04 |
|
Note Added: 0048546 | |
2015-11-25 09:04 |
|
Assigned To | isk => kgv |
2015-11-25 09:04 |
|
Status | assigned => resolved |
2015-11-25 10:34 | kgv | Assigned To | kgv => isk |
2015-11-25 10:34 | kgv | Status | resolved => assigned |
2015-11-25 14:33 | git | Note Added: 0048566 | |
2015-11-25 14:33 | git | Note Added: 0048567 | |
2015-12-04 11:51 |
|
Note Added: 0048747 | |
2015-12-04 11:51 |
|
Assigned To | isk => kgv |
2015-12-04 11:51 |
|
Status | assigned => resolved |
2015-12-08 12:17 | git | Note Added: 0048830 | |
2015-12-08 12:18 |
|
Note Added: 0048831 | |
2015-12-10 15:24 | kgv | Note Added: 0048954 | |
2015-12-10 15:24 | kgv | Assigned To | kgv => bugmaster |
2015-12-10 15:24 | kgv | Status | resolved => reviewed |
2015-12-11 10:57 |
|
Assigned To | bugmaster => mkv |
2015-12-11 13:23 | git | Note Added: 0049026 | |
2015-12-14 17:33 |
|
Note Added: 0049113 | |
2015-12-14 17:33 |
|
Note Added: 0049114 | |
2015-12-14 17:34 |
|
Note Added: 0049115 | |
2015-12-14 17:34 |
|
Assigned To | mkv => bugmaster |
2015-12-14 17:34 |
|
Status | reviewed => tested |
2015-12-14 17:34 |
|
Test case number | => Not needed |
2015-12-18 15:25 | bugmaster | Changeset attached | => occt master 74fb257d |
2015-12-18 15:25 | bugmaster | Status | tested => verified |
2015-12-18 15:25 | bugmaster | Resolution | open => fixed |
2016-04-17 14:01 | git | Note Added: 0053027 | |
2016-04-17 14:07 | git | Note Added: 0053062 | |
2016-04-20 15:42 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:50 |
|
Status | verified => closed |