0026892: Visualization, TKOpenGl - support 3D textures within OpenGl_Texture Add a new arbTexFloat extension in OpenGl_Context. Add a new prototype glTexImage in OpenGl_GlFunctions. Push error message if glTexImage3D is unavailable.